# jenkins-cpp-test

./: CMakeLists.txt  Jenkinsfile  README.md  conanfile.txt  jenkinsfile
src/: hello.cpp  hello.h  lib.cpp  main.cpp
tests/: CMakeLists.txt  results.xml  test.cpp
